{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 13,
  "lineage": "0eaf5ec1-291a-f16c-c4f1-6da7bed9d7c0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "one_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-07c9da70d76371f7d",
            "owner_id": "135928476890",
            "tags": {
              "Name": "vpc-lab-one-eng48-rasmus"
            },
            "vpc_id": "vpc-0235572ef7d826bac"
          },
          "dependencies": [
            "aws_vpc.one_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "two_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0b3b0f644d8891496",
            "owner_id": "135928476890",
            "tags": {
              "Name": "vpc-lab-two-eng48-rasmus"
            },
            "vpc_id": "vpc-0b1ad1d0b48a9e825"
          },
          "dependencies": [
            "aws_vpc.two_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "one_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0efa96fe3a400a0a3",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07c9da70d76371f7d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc-lab-one-eng48-rasmus"
            },
            "vpc_id": "vpc-0235572ef7d826bac"
          },
          "dependencies": [
            "aws_internet_gateway.one_gateway",
            "aws_vpc.one_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "two_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-06cc2e8835d9c0401",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b3b0f644d8891496",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc-lab-two-eng48-rasmus"
            },
            "vpc_id": "vpc-0b1ad1d0b48a9e825"
          },
          "dependencies": [
            "aws_internet_gateway.two_gateway",
            "aws_vpc.two_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "one_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ffd2a9d257443bae",
            "route_table_id": "rtb-0efa96fe3a400a0a3",
            "subnet_id": "subnet-04beeddb13c36c8a7"
          },
          "dependencies": [
            "aws_internet_gateway.one_gateway",
            "aws_route_table.one_route",
            "aws_subnet.one_subnet",
            "aws_vpc.one_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "two_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e0b24e2ba3a5b47",
            "route_table_id": "rtb-06cc2e8835d9c0401",
            "subnet_id": "subnet-0fd952ab77758a7ef"
          },
          "dependencies": [
            "aws_internet_gateway.two_gateway",
            "aws_route_table.two_route",
            "aws_subnet.two_subnet",
            "aws_vpc.two_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_one",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-02552dc210852c1dd",
            "description": "Allow :80 \u0026 :22 inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02552dc210852c1dd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "eng48-rasmus-vpc-one",
            "name_prefix": null,
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vpc-lab-one-eng48-rasmus"
            },
            "timeouts": null,
            "vpc_id": "vpc-0235572ef7d826bac"
          },
          "dependencies": [
            "aws_vpc.one_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_two",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-0f5e41dbbd0153668",
            "description": "Allow :80 \u0026 :22 inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f5e41dbbd0153668",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "eng48-rasmus-vpc-two",
            "name_prefix": null,
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vpc-lab-two-eng48-rasmus"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b1ad1d0b48a9e825"
          },
          "dependencies": [
            "aws_vpc.two_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "one_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-04beeddb13c36c8a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-04beeddb13c36c8a7",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "Name": "vpc-lab-one-eng48-rasmus"
            },
            "vpc_id": "vpc-0235572ef7d826bac"
          },
          "dependencies": [
            "aws_vpc.one_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "two_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-0fd952ab77758a7ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0fd952ab77758a7ef",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "Name": "vpc-lab-two-eng48-rasmus"
            },
            "vpc_id": "vpc-0b1ad1d0b48a9e825"
          },
          "dependencies": [
            "aws_vpc.two_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "one_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:vpc/vpc-0235572ef7d826bac",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0421f9c55ce671491",
            "default_route_table_id": "rtb-02f69982bb82b478c",
            "default_security_group_id": "sg-0a74a946d5adc1e09",
            "dhcp_options_id": "dopt-18d5d77d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0235572ef7d826bac",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02f69982bb82b478c",
            "owner_id": "135928476890",
            "tags": {
              "Name": "vpc-lab-one-eng48-rasmus"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "two_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:vpc/vpc-0b1ad1d0b48a9e825",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0dc5f910d6fae8956",
            "default_route_table_id": "rtb-0acfdaecca6a8d38a",
            "default_security_group_id": "sg-01c77ab8439f4f7c8",
            "dhcp_options_id": "dopt-18d5d77d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0b1ad1d0b48a9e825",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0acfdaecca6a8d38a",
            "owner_id": "135928476890",
            "tags": {
              "Name": "vpc-lab-two-eng48-rasmus"
            }
          }
        }
      ]
    }
  ]
}